fix: use overlayscrollbar for now

--- a/src/components/layout/OverlayScrollbar.module.css
+++ b/src/components/layout/OverlayScrollbar.module.css
@@ -1,15 +1,22 @@
 .scroll {
-  --scroll-padding-right: 4px;
   position: fixed;
-  top: 4px;
-  bottom: 4px;
-  right: 4px;
+  z-index: 9999;
+  top: 6px;
+  bottom: 6px;
+  right: 0;
+
+  &:hover .handler {
+    background-color: var(--bg-scrollbar-hover);
+    border-radius: 6px;
+    width: 8px;
+  }
 }
 
-.track {
+.handler {
   position: absolute;
+  z-index: 9999;
   top: 0;
-  right: 0;
+  right: 4px;
   height: 33%;
   user-select: none;
   min-height: 36px;
@@ -18,10 +25,10 @@
   text-align: right;
   border-radius: 4px;
   background-color: var(--bg-scrollbar);
-  transition: background-color, width 250ms;
+  transition: background-color, width 0.15s;
+}
 
-  &:hover {
-    background-color: var(--bg-scrollbar-hover);
-    width: 8px;
-  }
+.handler_active {
+  width: 8px;
+  background-color: var(--bg-scrollbar-active) !important;
 }
