--- a/src/styles/dark-variable.css
+++ b/src/styles/dark-variable.css
@@ -47,8 +47,9 @@ html[data-theme='dark'] {
   --bg-md-table-th: #090910;
   --bg-header: #00000085;
   --bg-body: #081216;
-  --bg-scrollbar: rgba(255, 255, 255, .11);
-  --bg-scrollbar-hover: rgba(255, 255, 255, .22);
+  --bg-scrollbar: rgba(200, 245, 255, .11);
+  --bg-scrollbar-hover: rgba(200, 245, 255, .22);
+  --bg-scrollbar-active: rgba(200, 245, 255, .33);
   --bg-tag: #162024b2;
   --bg-vertical-line: #333a43;
   --bg-modal: #00000030;
