--- a/src/styles/variable.css
+++ b/src/styles/variable.css
@@ -47,7 +47,8 @@
   --bg-header: #ffffff85;
   --bg-body: #e3e8ef;
   --bg-scrollbar: rgba(0, 0, 0, .33);
-  --bg-scrollbar-hover: rgba(0, 0, 0, .22);
+  --bg-scrollbar-hover: rgba(0, 0, 0, .44);
+  --bg-scrollbar-active: rgba(0, 0, 0, .55);
   --bg-tag: #e9eef4ba;
   --bg-vertical-line: #bfbfbf;
   --bg-modal: #00000073;
